feat: wait time estimation
