# backend/internal/handler/vcjob/webide.go
@@ -97,6 +97,7 @@ func (mgr *VolcanojobMgr) CreateWebIDEJob(c *gin.Context) {
 		req.Name,
 		req.Template,
 		req.AlertEnabled,
+		req.MaxRunTime,
 	)
 
 	// 5. Create the pod spec
